Bug 250265 - Black background of short summary display
Summary: Black background of short summary display
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Themes (other bugs)
Version First Reported In: 1.4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-05 13:57 UTC by Lars-Göran Thieme
Modified: 2017-08-10 07:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments
Screenshot of the unreadable tooltip (311.61 KB, image/png)
2010-09-08 06:44 UTC, Samuel Gilbert
Details
problem with KDE 4.4.x (782.21 KB, image/png)
2010-09-13 05:04 UTC, caulier.gilles
Details
Screenshot with KDE Oxygen color scheme. (671.98 KB, image/png)
2010-09-13 05:13 UTC, caulier.gilles
Details
Colors scheme unde KDE4 for Linux (564.87 KB, image/png)
2010-09-14 08:53 UTC, caulier.gilles
Details
Color scheme under Win7 (416.18 KB, image/png)
2010-09-14 10:17 UTC, caulier.gilles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lars-Göran Thieme 2010-09-05 13:57:41 UTC
Version:           1.4.0 (using KDE 4.5.0) 
OS:                Linux

If i point with the mouse cursor on a thumbnail in the album view the short summary is displayed with black background since digikam 1.4 on KDE 4.5.1. The textcolor is also black so the summary is now unreadable.

Reproducible: Always

Steps to Reproduce:
Point on a thumbnail with mouse cursor.

Actual Results:  
Short summary is displayed but with black text on black background. Unreadable.

Expected Results:  
Short summary is displayed with black text on backgroundcolor chosen by the selected digikam theme.
Comment 1 Johannes Wienke 2010-09-05 15:18:29 UTC
Did you try to switch the digikam theme? Does it change the appearance?
Comment 2 Lars-Göran Thieme 2010-09-05 16:56:15 UTC
I tried every theme, the text color is changed according to the theme settings but the background is still black.
Comment 3 Johannes Wienke 2010-09-05 17:07:17 UTC
Ok, does the background color change if you switch to another kde theme?
Comment 4 Lars-Göran Thieme 2010-09-05 17:32:33 UTC
Ok, that is it! Currently i'm using the oxygen theme but if i switch to plastique the background color of the short summary display is digikam is working fine. It gets the color according to the selected theme settings. Its readable all the time.

But with kde theme oxygen its black on all digikam themes.
Comment 5 Marcel Wiesweg 2010-09-05 19:08:16 UTC
I can confirm this - or quite: It is transparent. (I assume you dont have full graphics acceleration enabled or available?).
There must be some "feature" in oxygen to have transparent backgrounds for certain types of images.
I see a pleasant slightly transparent tooltip background with KMail and Kate. Not sure what we do wrong, need to check the code.
Comment 6 Lars-Göran Thieme 2010-09-05 20:12:49 UTC
Sorry, i have forgotten to mention it. I have disabled all the desktop effects because of some problems with it. So i have no transparency at all.
Comment 7 Samuel Gilbert 2010-09-08 06:44:49 UTC
Created attachment 51409 [details]
Screenshot of the unreadable tooltip

Hello,

I'm not 100% sure this is the same issue, but ever since I upgraded to digiKam 1.4.0, the tooltip in the album view is completely unreadable.  I looks like the background of the tooltip wasn't drawn.

Can you look at the file I uploaded and tell me if it looks like what you encountered?

I will try to change my KDE theme to see if it helps.
Comment 8 Samuel Gilbert 2010-09-08 06:47:53 UTC
I just try switching themes and it didn't help in my case.
Comment 9 caulier.gilles 2010-09-08 08:47:07 UTC
Try to switch KDE theme, not digiKam theme Let's digiKam theme to default

Gilles Caulier
Comment 10 Marcel Wiesweg 2010-09-08 12:19:53 UTC
SVN commit 1172980 by mwiesweg:

Use the current style for drawing of the tooltips:
- no need for a QLable in a QFrame, as a QLabel is a QFrame
- set mask and transparency from style (when compositing is switched off)
- let the style draw toolip panel (background)
- switch to StyledPanel frame style, gives rounded edges

Please see if this agrees with your taste.
Needs testing with KDE 4.4
Needs testing without compositing.


 M  +45 -30    ditemtooltip.cpp  
 M  +2 -2      ditemtooltip.h
Comment 11 Marcel Wiesweg 2010-09-08 12:20:55 UTC
Screenshot (KDE4.5, compositing enabled):
http://img704.imageshack.us/i/plasmadesktopqn1982.png/
Comment 12 Lars-Göran Thieme 2010-09-08 15:37:41 UTC
For me it works fine with the diff from r1172980. But Tested only on KDE 4.5.1 with compositing turned on and off!
Comment 13 Samuel Gilbert 2010-09-08 19:30:46 UTC
After a bit more testing and investigating, here are my findings :

 - I was changing the KDE Desktop theme which is separate from "Application Apperance -> Style"

 - KDE compositing setting, X11 Composite extension, and Style have an impact on how the tooltip is rendered.

 - When composting is enabled and Oxygen is selected, the tooltip renders correctly with transparency even though it's hard to read.

 - If X11 Composite extension is not loaded and Oxygen is selected, the tootip renders as shown in the screenshot I uploaded to this issue.

 - When the X11 Composite extension is loaded and Oxygen is selected, but KDE compositing is disabled, the tooltip gets rendered with a black background.

 - When another theme such as Plastique is selected, the tooltip gets rendered correctly regardless of the compositing settings.

So is this a digiKam bug or an oxygen bug?
Comment 14 Marcel Wiesweg 2010-09-09 09:58:59 UTC
With my fix above, the tooltip is now rendered properly from digikam's side, so the problem should be solved.

Whose problem was it? It's ok that oxygen defaults to a transparent background. Before, no style did that so that problem did not appear. We really have to draw a background. The black background is also the correct fallback.
To have an uninitialized pixmap as in your (Samuel) screenshot is a bug, but then I can accept that running without the composite extension in the year 2010 is not supported by the style. Those oxygen/kwin guys are troubled enough with driver bugs.

Gilles:
If this fix is fine with KDE 4.4, I suggest to backport for the 1.5 release?
Comment 15 caulier.gilles 2010-09-09 10:05:07 UTC
yes, it work under 4.4. It can be backported to 1.5 release.

Gilles Caulier
Comment 16 Marcel Wiesweg 2010-09-09 22:16:11 UTC
SVN commit 1173603 by mwiesweg:

Backport changes in thumbnail drawing

BUG: 250265

 M  +45 -30    ditemtooltip.cpp  
 M  +2 -2      ditemtooltip.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1173603
Comment 17 caulier.gilles 2010-09-13 05:04:45 UTC
Created attachment 51576 [details]
problem with KDE 4.4.x

Marcel, 

i just discover a problem with KDE 4.4.x and "wonton soup" color scheme from KDE and digiKam using default color scheme. Look my screenshot from windows.

Testing the same configuration under Linux another wrong result. 

Gilles
Comment 18 caulier.gilles 2010-09-13 05:13:13 UTC
Created attachment 51577 [details]
Screenshot with KDE Oxygen color scheme.

The Widgets Style used from KDE settings is Oxygen. If i use another KDE color Scheme, this do not fix the problem.

Conclusion : backporting these changes to trunk is not fine as well. Patch must be applied only if digiKam is compiled against KDE 4.5

Gilles Caulier
Comment 19 caulier.gilles 2010-09-13 05:16:43 UTC
If i use another KDE widget style, as Plastique, misxing Different KDE color scheme with always using default digiKam color scheme, do not fix the problem. Dysfunction exists for all KDE color scheme and style.

Gilles Caulier
Comment 20 Marcel Wiesweg 2010-09-13 21:07:44 UTC
SVN commit 1174974 by mwiesweg:

Adjust global palette also for roles used by tooltips (tooltips only use the inactive group)

CCBUG: 250265


 M  +2 -0      themeengine.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1174974
Comment 21 caulier.gilles 2010-09-14 08:53:52 UTC
Created attachment 51627 [details]
Colors scheme unde KDE4 for Linux

Marcel,

It's a little bit better but not yet fully readable, especially if i change digiKam color scheme from default to another one.

KDE4 color scheme still wonton soup. If i switch to Oxygen, it's not better.

Gilles Caulier
Comment 22 caulier.gilles 2010-09-14 10:17:45 UTC
Created attachment 51631 [details]
Color scheme under Win7

The same tooltip rendered under KDE 4.4.4 / Win7. Wonton Soup kde4 coor scheme + default digiKam color scheme. Oxygen widget style.
Comment 23 Marcel Wiesweg 2010-09-14 10:56:25 UTC
Here is how it should look like (Digikam "DarkRoom", KDE "Wonton Soup", KDE 4.5.1):
http://img214.imageshack.us/my.php?image=plasmadesktopmb1960.png

Seems that the palette is not properly used, either by Oxygen 4.4 or it's a Windows peculiarity. I cannot test either. The KDE color scheme shouldn't have influence because we change the palette.
Comment 24 caulier.gilles 2011-04-07 14:11:00 UTC
Git commit e55f3d748f461f2f1ac956995d644de658200a4a by Gilles Caulier.
Committed on 07/04/2011 at 14:11.
Pushed by cgilles into branch 'master'.

port digiKam theme engine to KDE color Theme engine.
Now, there is no mix between digiKam color engine and KDE theme used in background.
Benefits : we can donload new color theme scheme from KDE control center and apply it to digiKam as well,
independently of the rest of KDE.

To end users : I don't tested under Gnome. Please give me a feedback...

BUGS: 257803
BUGS: 250265
BUGS: 220068
BUGS: 241116
BUGS: 252700
BUGS: 168669
CCBUGS: 265554

M  +0    -1    data/CMakeLists.txt     
D  +0    -74   data/themes/Blue     
D  +0    -15   data/themes/CMakeLists.txt     
D  +0    -75   data/themes/Clean     
D  +0    -75   data/themes/DLR     
D  +0    -74   data/themes/Dark     
D  +0    -78   data/themes/DarkRoom     
D  +0    -63   data/themes/Dessert     
D  +0    -75   data/themes/Digikasa     
D  +0    -75   data/themes/Dreary     
D  +0    -63   data/themes/Gray     
D  +0    -75   data/themes/Marine     
D  +0    -75   data/themes/OrangeCrush     
D  +0    -62   data/themes/Rose     
D  +0    -75   data/themes/Sandy     
M  +13   -40   digikam/main/digikamapp.cpp     
M  +1    -3    digikam/main/digikamapp.h     
M  +0    -3    digikam/main/digikamapp_p.h     
M  +1    -5    libs/themeengine/theme.cpp     
M  +1    -4    libs/themeengine/theme.h     
M  +198  -1187 libs/themeengine/themeengine.cpp     
M  +16   -15   libs/themeengine/themeengine.h     
M  +6    -5    showfoto/main/showfoto.cpp     
M  +1    -29   utilities/cameragui/main/cameraui.cpp     
M  +0    -3    utilities/cameragui/main/cameraui.h     
M  +0    -3    utilities/cameragui/main/cameraui_p.h     
M  +1    -43   utilities/imageeditor/editor/editorwindow.cpp     
M  +0    -6    utilities/imageeditor/editor/editorwindow.h     
M  +0    -12   utilities/imageeditor/editor/imagewindow.cpp     
M  +0    -2    utilities/imageeditor/editor/imagewindow.h     
M  +1    -32   utilities/lighttable/lighttablewindow.cpp     
M  +0    -3    utilities/lighttable/lighttablewindow.h     
M  +0    -3    utilities/lighttable/lighttablewindow_p.h     
M  +1    -32   utilities/queuemanager/main/queuemgrwindow.cpp     
M  +0    -3    utilities/queuemanager/main/queuemgrwindow.h     
M  +0    -3    utilities/queuemanager/main/queuemgrwindow_p.h     

http://commits.kde.org/digikam/e55f3d748f461f2f1ac956995d644de658200a4a