Backport changes in thumbnail drawing

BUG: 250265

svn path=/trunk/extragear/graphics/digikam/; revision=1173603